--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
 }
 body {
-  background-image: url("/img/bg-wallpaper.jpg");
+  background-image: url("./img/bg-wallpaper.jpg");
 }
 h1 {
   color: white;
